# deep-cluster-tf

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deep_cluster/: main.py
deep_cluster/clustering/: kmeans.py  pca.py
deep_cluster/convnet/: alexnet.py
deep_cluster/dataset/: dataset.py
deep_cluster/preprocessing/: cleanup_dicom.py  dataset.py
