[tool.poetry]
name = "deep-cluster-tf"
version = "0.1.0"
description = ""
authors = ["Kamel TIGHIDET <tighidet.kamel@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.4.0"
scikit-learn = "^0.24.0"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
